--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,15 +72,18 @@ html, body {
 }
 
 .films_block img{
-	margin-bottom: 5%;
+	margin-bottom: 2%;
 	border-radius: 5px;
 	border: solid 5px #dad7d5;
-	width: 100%
+	width: 100%;
+	height: 270px;
 }
 
 .film_label {
 	padding: 2%;
-	margin-bottom: 4%;
+	margin-bottom: 35px;
+	width: auto;
+	height: 15px;
 }
 
 .margin-8 {
