--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,8 +125,18 @@ html, body {
 	
 }
 
+.list-group-item>.badge {
+	/* float: right; */
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
+}
+
 .badge {
 	background-color: #f0ac4e;
+	
 }
 
 .info-block {
