--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 .header a, a:hover {
 	color: #f0ad4e;
 	text-decoration: none;
@@ -75,8 +76,8 @@ html, body {
 	margin-bottom: 2%;
 	border-radius: 5px;
 	border: solid 5px #dad7d5;
-	width: 100%;
-	height: 270px;
+	width: 160px;
+	height: 250px;
 }
 
 .film_label {
@@ -110,6 +111,14 @@ html, body {
 	letter-spacing: 2px;
 }
 
+.sidebar-header a {
+	color: #fff;
+}
+
+.sidebar-header a:hover {
+	color: rgb(86, 87, 85);
+}
+
 .form-control {
 	font-size: 14px;
 	border-radius: 0px;
@@ -129,8 +138,8 @@ html, body {
 	/* float: right; */
 	position: absolute;
 	top: 50%;
-	left: 50%;
-	margin-right: -50%;
+	left: 85%;
+	
 	transform: translate(-50%, -50%);
 }
 
@@ -152,7 +161,9 @@ html, body {
 }
 
 textarea.form-control {
-	height: 200px;
+	min-height: 200px;
+	max-height: 500px;
+	resize: vertical;
 }
 
 .img-thumbnail {
