--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,14 @@ textarea.form-control {
 }
 
 
+.pagination>.active>a {
+    z-index: 3;
+    color: #fff;
+    cursor: default;
+    background-color: #f0ac4e;
+    border-color: #f0ac4e;
+}
+
 
 
 
